fix: load test progress bar

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -157,6 +157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Local inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -198,8 +205,8 @@
     "n = 1000\n",
     "with ThreadPool(10) as pool:\n",
     "    with tqdm(total=n) as pbar:\n",
-    "        pool.imap_unordered(invoke, [random() for _ in range(n)])\n",
-    "        pbar.update(1)\n"
+    "        for _ in pool.imap_unordered(invoke, [random() for _ in range(n)]):\n",
+    "            pbar.update(1)"
    ]
   }
  ],
